<resources>
    <string name="app_name">Montessori Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fr_first_students">Home page</string>
    <string name="fr_second_add_kid">to Students List</string>
    <string name="fr_third_activities_list">UPDATE LATER !</string>
    <string name="fr_fourth_view_edit_activity">UPDATE LATER !</string>

    <!-- Strings used in First Fragment (Student - Home Page) -->
    <string name="students_page_title"><u>Students</u></string>
    <string name="add_student_btn_text">+</string>

    <!-- Strings used in Second Fragment (Add a student) -->
    <string name="single_student_page_title"><u>Student details - </u></string>
    <string name="edit_mode_text"><u>edit</u></string>
    <string name="view_mode_text"><u>view</u></string>
    <string name="name_row_title">Name :</string>
    <string name="row_btn_text">OK</string>
    <string name="name_placeholder">Full name</string>
    <string name="alias_row_title">Nick :</string>
    <string name="alias_placeholder">Preferred name</string>
    <string name="dob_row_title">DOB :</string>
    <string name="dob_placeholder">Birth date</string>
    <string name="age_row_title">Age :</string>
    <string name="notes_row_title">Notes :</string>
    <string name="notes_placeholder">Comments</string>


    <string name="notes_tempo">TEST TEXT. There is little doubt that the international community\'s attitude towards Ukraine has shifted.
            Full support in Washington DC cannot be guaranteed - and yet the fundamentals of the conflict have not budged.
            A country on Europe\'s eastern flank is still fighting to repel Russian forces after the Kremlin launched an illegal invasion.
            Ukraine surprised the world when its armed forces prevented the country being overrun in February 2022.
            Many Western countries surprised them in return with the enthusiasm of their support.
            However, Ukraine cannot keep going in the same vein without the wealth and backing of other countries.
            The first lady\'s warnings seem designed to make that crystal clear. There is little doubt that the international community\'s attitude towards Ukraine has shifted.
            Full support in Washington DC cannot be guaranteed - and yet the fundamentals of the conflict have not budged.
            A country on Europe\'s eastern flank is still fighting to repel Russian forces after the Kremlin launched an illegal invasion.
            Ukraine surprised the world when its armed forces prevented the country being overrun in February 2022.
            Many Western countries surprised them in return with the enthusiasm of their support.
            However, Ukraine cannot keep going in the same vein without the wealth and backing of other countries.
            The first lady\'s warnings seem designed to make that crystal clear.
    </string>


    <string name="edit_btn_text">Edit</string>
    <string name="cancel_edit_btn_text"><u>Cancel</u></string>
    <string name="done_edit_btn">Done</string>
    <string name="to_reports_btn">Reports</string>

    <!-- Strings used in Third Fragment (List of activities) -->
    <string name="activities_page_title"><u>Presentations</u></string>
    <string name="fm_fr3_to_fr1">Back</string>
    <string name="hello_blank_fragment">Presentations</string>
    <string name="unchecked">Unchecked check-box</string>

    <!-- Strings used in Second Fragment (Add a student) -->
    <string name="an_activity_page_title"><u>Presentations</u></string>

</resources>