<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/single_student_page_title"
        style="@style/PageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_student_page_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- NAME row -->
    <LinearLayout
        android:id="@+id/fr2_name_row"
        style="@style/fr2Row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/single_student_page_title">

        <TextView
            android:id="@+id/_name_row_title"
            style="@style/fr2RowTitle"
            android:text="@string/name_row_title" />

        <TextView
            android:id="@+id/name_row_text"
            style="@style/fr2RowData"
            android:visibility="gone" />

        <EditText
            android:id="@+id/name_row_edit"
            style="@style/fr2RowData"
            android:hint="@string/name_placeholder"
            android:inputType="text|textCapWords" />

        <Button
            android:id="@+id/name_row_btn"
            style="@style/fr2RowOkBtn" />
    </LinearLayout>


    <!-- NICK row -->
    <LinearLayout
        android:id="@+id/fr2_alias_row"
        style="@style/fr2Row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr2_name_row">

        <TextView
            android:id="@+id/alias_row_title"
            style="@style/fr2RowTitle"
            android:text="@string/alias_row_title" />

        <TextView
            android:id="@+id/alias_row_text"
            style="@style/fr2RowData"
            android:visibility="gone" />

        <EditText
            android:id="@+id/alias_row_edit"
            style="@style/fr2RowData"
            android:hint="@string/alias_placeholder"
            android:inputType="text|textCapWords" />

        <Button
            android:id="@+id/alias_row_btn"
            style="@style/fr2RowOkBtn" />
    </LinearLayout>


    <!-- DOB row -->
    <LinearLayout
        android:id="@+id/fr2_dob_row"
        style="@style/fr2Row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr2_alias_row">

        <TextView
            android:id="@+id/dob_row_title"
            style="@style/fr2RowTitle"
            android:text="@string/dob_row_title" />

        <TextView
            android:id="@+id/dob_row_text"
            style="@style/fr2RowData"
            android:visibility="gone" />

        <EditText
            android:id="@+id/dob_row_edit"
            style="@style/fr2RowData"
            android:hint="@string/dob_placeholder"
            android:inputType="text|textCapWords" />

        <Button
            android:id="@+id/dob_row_btn"
            style="@style/fr2RowOkBtn" />
    </LinearLayout>

    <!-- AGE row -->
    <LinearLayout
        android:id="@+id/fr2_age_row"
        style="@style/fr2Row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr2_dob_row">

        <TextView
            android:id="@+id/fr2_age_title"
            style="@style/fr2RowTitle"
            android:text="@string/age_row_title" />

        <TextView
            android:id="@+id/fr2_age_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:text="4 years 8 months"/>
    </LinearLayout>


    <!-- NOTES row -->
    <LinearLayout
        android:id="@+id/fr2_notes_row"
        style="@style/fr2Row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr2_age_row">

        <TextView
            android:id="@+id/f2_notes_title"
            style="@style/fr2RowTitle"
            android:text="@string/notes_row_title" />

        <EditText
            android:id="@+id/f2_notes_edit"
            style="@style/fr2RowData"
            android:hint="@string/notes_placeholder"
            android:inputType="text|textMultiLine" />

        <Button
            android:id="@+id/f2_notes_btn"
            style="@style/fr2RowOkBtn" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/fr2_notes_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/fr2_controls_table"
        app:layout_constraintTop_toBottomOf="@+id/fr2_notes_row">

        <TextView
            android:id="@+id/f2_notes_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:text="@string/notes_tempo" />
    </ScrollView>


    <LinearLayout
        android:id="@+id/fr2_controls_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/to_fr1_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/previous" />

        <Button
            android:id="@+id/done_edit_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:text="@string/done_edit_btn" />

        <Button
            android:id="@+id/to_fr3_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/to_reports_btn" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>